[package]
name = "chess-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chess-proc-macros = { path = "./proc-macros" }
colored = "2.0"
tokio = { version = "1", features = ["full"] }
