[package]
name = "derive_proc_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
serde_json = "1.0"
json-rpc = { path = "../json-rpc" }

[lib]
proc-macro = true
