[package]
name = "chess-server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
colored = "2.0"
tokio = { version = "1", features = ["full"] }
chess-lib = { path = "../chess" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json-rpc = { path = "../json-rpc" }
json-rpc-proc-macros = { path = "../json-rpc/proc-macros" }

[[bin]]
name = "chess-server"
